--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="FF5500">#FF5500</color>
     <color name="colorDivideBar">#BDBDBD</color>
+    <color name="itemTextColor">#000</color>
 </resources>
