--- a/app/src/main/res/layout/question_list.xml
+++ b/app/src/main/res/layout/question_list.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content"
     android:layout_margin="1dp"
     android:layout_marginTop="5dp"
-    android:orientation="horizontal"
     android:padding="2dp"
     app:ignore="NamespaceTypo"
     card_view:cardCornerRadius="5dp"
@@ -35,7 +34,7 @@
 
 
             <TextView
-                android:id="@+id/tv"
+                android:id="@+id/tvHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/text_size"
