integration with Rishab.

--- a/app/src/main/res/drawable/light_background.xml
+++ b/app/src/main/res/drawable/light_background.xml
@@ -4,7 +4,7 @@
 
     <corners android:radius="60dp"/>
 
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/cardview_shadow_end_color" />
 
     <padding
         android:bottom="0dp"
