--- a/app/src/main/res/layout/question_list.xml
+++ b/app/src/main/res/layout/question_list.xml
@@ -4,56 +4,62 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="1dp"
-    android:layout_marginTop="5dp"
-    android:padding="2dp"
+    android:layout_marginTop="6dp"
     app:ignore="NamespaceTypo"
     card_view:cardCornerRadius="5dp"
-    card_view:cardElevation="2dp"
-    >
+    card_view:cardElevation="2dp">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="8dp"
+        android:id="@+id/headingLayout">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/tvQNo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:text="5"
-                android:textColor="@color/itemTextColor"
-                android:textSize="@dimen/text_size"
-                android:layout_marginLeft="@dimen/text_size"/>
-
-
-            <TextView
-                android:id="@+id/tvHeading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/text_size"
-                android:text="short summary"
-                android:textColor="@color/itemTextColor"
-                android:textSize="@dimen/text_size"
-                android:visibility="visible" />
-        </LinearLayout>
         <TextView
-            android:id="@+id/tvSummary"
+            android:id="@+id/tvQNo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:paddingTop="1dp"
-            android:text="some text :"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="5"
             android:textColor="@color/itemTextColor"
-            android:textSize="10sp" />
+            android:textSize="@dimen/text_size"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/tvHeading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Heading"
+            android:textColor="@color/itemTextColor"
+            android:textSize="@dimen/text_size"
+            android:visibility="visible"
+            card_view:layout_constraintBottom_toBottomOf="@+id/tvQNo"
+            card_view:layout_constraintStart_toEndOf="@+id/tvQNo"
+            card_view:layout_constraintTop_toTopOf="@+id/tvQNo" />
+
+        <TextView
+            android:id="@+id/tvSummary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:paddingTop="1dp"
+            android:text="SOME TEXT"
+            android:textColor="@color/itemTextColor"
+            android:textSize="10sp"
+            card_view:layout_constraintBottom_toBottomOf="@+id/tvHeading"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toEndOf="@+id/tvHeading"
+            card_view:layout_constraintTop_toTopOf="@+id/tvHeading" />
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
