--- a/app/src/main/res/layout/question_list.xml
+++ b/app/src/main/res/layout/question_list.xml
@@ -9,7 +9,8 @@
     android:padding="2dp"
     app:ignore="NamespaceTypo"
     card_view:cardCornerRadius="5dp"
-    card_view:cardElevation="2dp">
+    card_view:cardElevation="2dp"
+    android:id="@+id/headingLayout">
 
     <TextView
         android:id="@+id/head"
@@ -47,22 +48,24 @@
                 android:id="@+id/tvHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/text_size"
                 android:text="short summary"
                 android:textColor="@color/itemTextColor"
                 android:textSize="@dimen/text_size"
+                android:layout_marginLeft="@dimen/text_size"
                 android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/tvQuestion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="some text :"
+                android:textColor="@color/itemTextColor"
+                android:textSize="@dimen/text_size"
+                android:paddingBottom="@dimen/text_size"
+                />
+
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvSummary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:paddingTop="1dp"
-            android:text="some text :"
-            android:textColor="@color/itemTextColor"
-            android:textSize="10sp" />
 
         <RelativeLayout
             android:id="@+id/layoutButton"
@@ -80,8 +83,8 @@
 
                 <Button
                     android:id="@+id/btnYes"
-                    android:layout_width="@dimen/select_option_width"
-                    android:layout_height="@dimen/select_option_height"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="YES"
                     android:textSize="10sp"
                     android:textColor="#000"
@@ -91,8 +94,8 @@
 
                     android:layout_alignRight="@id/btnYes"
                     android:id="@+id/btnNo"
-                    android:layout_width="@dimen/select_option_width"
-                    android:layout_height="@dimen/select_option_height"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="No"
                     android:textSize="10sp"
                     android:textColor="#fff"
@@ -101,8 +104,8 @@
 
                 <Button
                     android:id="@+id/btnMaybe"
-                    android:layout_width="@dimen/select_option_width"
-                    android:layout_height="@dimen/select_option_height"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_alignRight="@id/btnNo"
                     android:text="Maybe"
                     android:textSize="10sp"
