--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FF5500</color>
+    <!--color name="colorAccent">#FF4081</color-->
     <color name="FF5500">#FF5500</color>
     <color name="colorDivideBar">#BDBDBD</color>
     <color name="itemTextColor">#000</color>
