--- a/app/src/main/res/layout/downloaded_item.xml
+++ b/app/src/main/res/layout/downloaded_item.xml
@@ -5,8 +5,7 @@
     android:id="@+id/headingLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="1dp"
-    android:layout_marginTop="5dp"
+    android:layout_margin="5dp"
     android:padding="2dp"
     app:ignore="NamespaceTypo"
     card_view:cardCornerRadius="5dp"
@@ -23,8 +22,8 @@
 
         <ImageView
             android:id="@+id/ivFileImage"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
@@ -58,8 +57,5 @@
             android:textStyle="italic"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintTop_toTopOf="parent" />
-
-    </>
-
-
+    </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
