--- a/app/src/main/res/layout/question_list.xml
+++ b/app/src/main/res/layout/question_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -69,8 +70,8 @@
         <RelativeLayout
             android:id="@+id/layoutButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_alignParentBottom="true"
                 android:layout_width="wrap_content"
@@ -81,40 +82,41 @@
 
 
                 <Button
+                    android:layout_margin="2dp"
                     android:id="@+id/btnYes"
                     android:layout_width="@dimen/select_option_width"
                     android:layout_height="@dimen/select_option_height"
                     android:text="YES"
                     android:textSize="10sp"
-                    android:textColor="#000"
-                    android:background="@drawable/button_border_left"
-                    />
-                <Button
+                    android:textColor="@color/colorPrimaryDark"
+                    android:background="@drawable/button_border_left"/>
 
+                <Button
+                    android:layout_margin="2dp"
                     android:layout_alignRight="@id/btnYes"
                     android:id="@+id/btnNo"
                     android:layout_width="@dimen/select_option_width"
                     android:layout_height="@dimen/select_option_height"
                     android:text="No"
                     android:textSize="10sp"
-                    android:textColor="#fff"
-                    android:background="@drawable/button_border_active"
-                    />
+                    android:textColor="@color/colorPrimaryDark"
+                    android:background="@drawable/button_border_active"/>
 
                 <Button
+                    android:layout_margin="2dp"
                     android:id="@+id/btnElse"
                     android:layout_width="@dimen/select_option_width"
                     android:layout_height="@dimen/select_option_height"
                     android:layout_alignRight="@id/btnNo"
                     android:text="N/A"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textSize="10sp"
-                    android:background="@drawable/button_border_right"
-                    />
+                    android:background="@drawable/button_border_right"/>
+
             </LinearLayout>
+
         </RelativeLayout>
 
     </LinearLayout>
-
-
 
 </android.support.v7.widget.CardView>
