--- a/app/src/main/res/drawable/button_border_active_right.xml
+++ b/app/src/main/res/drawable/button_border_active_right.xml
@@ -7,7 +7,7 @@
         android:bottomRightRadius="5dp"
         android:topRightRadius="5dp" />
 
-    <stroke android:width="2px"
+    <stroke android:width="0dp"
         android:color="@color/colorPrimary" />
     <solid android:color="@color/colorPrimaryDark"/>
 
