--- a/app/src/main/res/layout/activity_my_checklists.xml
+++ b/app/src/main/res/layout/activity_my_checklists.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/myChecklistsLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <android.support.v7.widget.Toolbar
