--- a/app/src/main/res/layout/checklist_layout.xml
+++ b/app/src/main/res/layout/checklist_layout.xml
@@ -40,7 +40,6 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:text="filename"
-            card_view:layout_constraintBottom_toBottomOf="@+id/ivFileImage"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toEndOf="@+id/ivFileImage"
             card_view:layout_constraintTop_toTopOf="@+id/ivFileImage" />
@@ -57,5 +56,15 @@
             android:textStyle="italic"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvdatetime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="TextView"
+            android:textSize="12sp"
+            card_view:layout_constraintStart_toStartOf="@+id/tvFileName"
+            card_view:layout_constraintTop_toBottomOf="@+id/tvFileName" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
