--- a/app/src/main/res/layout/checklist_layout.xml
+++ b/app/src/main/res/layout/checklist_layout.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginBottom="8dp">
-
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp"
+    android:layout_margin="2dp">
     <RelativeLayout
         android:id="@+id/view_background"
         android:layout_width="match_parent"
@@ -98,6 +99,18 @@
             android:layout_toRightOf="@id/ivFileImage"
             android:textColor="@color/colorAccent"
             android:textStyle="bold" /-->
+        <ImageView
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginStart="70dp"
+            android:src="@drawable/ic_action_share"
+            app:layout_constraintBottom_toBottomOf="@id/tvDateTime"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/tvDateTime"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
-</FrameLayout>
+</android.support.v7.widget.CardView>
