--- a/app/src/main/res/layout/report_layout.xml
+++ b/app/src/main/res/layout/report_layout.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginBottom="8dp">
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp"
+    android:layout_margin="2dp">
 
     <RelativeLayout
         android:id="@+id/view_background"
@@ -28,8 +30,8 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@id/delete_icon"
-            android:text="DELETE"
             android:shadowColor="@android:color/white"
+            android:text="DELETE"
             android:textColor="#FFFF"
             android:textSize="13dp" />
 
@@ -61,8 +63,8 @@
 
         <TextView
             android:id="@+id/tvFileName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="77dp"
+            android:layout_height="24dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="8dp"
             android:layout_toEndOf="@+id/ivFileImage"
@@ -97,6 +99,15 @@
             android:layout_toRightOf="@id/ivFileImage"
             android:textColor="@color/colorAccent"
             android:textStyle="bold" /-->
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-    </android.support.constraint.ConstraintLayout>
-</FrameLayout>
+            android:layout_marginStart="70dp"
+            android:src="@drawable/ic_action_share"
+            app:layout_constraintBottom_toBottomOf="@id/tvDateTime"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/tvDateTime"
+            app:layout_constraintStart_toStartOf="parent" /> </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
