project update commit 3 DEC 2018 15.23

--- a/app/src/main/res/layout/checklist_layout.xml
+++ b/app/src/main/res/layout/checklist_layout.xml
@@ -101,7 +101,9 @@
             android:layout_toRightOf="@id/ivFileImage"
             android:textColor="@color/colorAccent"
             android:textStyle="bold" /-->
+
         <ImageView
+            android:id="@+id/ivShare"
             android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
