--- a/app/src/main/res/layout/report_layout.xml
+++ b/app/src/main/res/layout/report_layout.xml
@@ -100,6 +100,7 @@
             android:textColor="@color/colorAccent"
             android:textStyle="bold" /-->
         <ImageView
+            android:id="@+id/ivShare"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
